m9/manifests/hostname_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: hostname.d62f7d2822534dfa939f.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: hostname
          servicePort: 80
        path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-in
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hostname
        version: v1
    spec:
      containers:
      - image: rstarmer/hostname:v1
        imagePullPolicy: Always
        name: hostname
        resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hostname
  name: hostname
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hostname
  type: ClusterIP
